# Proyecto1Datos2CE_SocketLess

./: Ammunation.cpp  Ammunation.h  AmorYPaz.xml  Background.cpp  Background.h  Bullet.cpp  Bullet.h  BulletCollector.cpp  BulletCollector.h  BulletD.cpp  BulletD.h  CMakeLists.txt  Codes.txt  Declarations.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  InGame.cpp  InGame.h  InformationNode.cpp  InformationNode.h  LaCuracao.xml  OCorona.xml  Player.cpp  Player.h  RATATATA.xml  ShipEnemy.cpp  ShipEnemy.h  ShipPlayer.cpp  ShipPlayer.h  Strategys.cpp  Strategys.h  Waves.cpp  Waves.h  main.cpp
